--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "Skeleton dapp",
   "main": "webpack.config.js",
   "dependencies": {
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.25.0",
     "bignumber.js": "^4.0.2",
-    "oo7": "file:///Users/gav/Core/oo7",
-    "oo7-parity": "file:///Users/gav/Core/oo7-parity",
-    "oo7-react": "file:///Users/gav/Core/oo7-react",
-    "parity-reactive-ui": "file:///Users/gav/Core/parity-reactive-ui",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "webpack": "^2.5.1",
+    "oo7": "^0.5.0",
+    "oo7-parity": "^0.6.1",
+    "oo7-react": "^0.4.1",
+    "parity-reactive-ui": "^0.4.3",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   },
   "devDependencies": {
